--- a/WebApplication/WebApplication/wwwroot/spa/package.json
+++ b/WebApplication/WebApplication/wwwroot/spa/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.9",
     "bootstrap": "^5.0.2",
     "history": "^5.0.1",
+    "mdb-react-ui-kit": "^1.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
